--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "element-plus": "^2.2.14",
     "vue": "^3.2.37",
     "vue-router": "^4.1.6"
